<resources>
    <string name="app_name"> Laboratory 1</string>
    <string name="score_text">Score actuel </string>
    <string name="last_game">Dernier score</string>
    <string name="score_number">Aucune partie jouer.</string>
    <string name="true_button">Vrai</string>
    <string name="false_button">Faux</string>
    <string name="next_button">Suivant</string>
    <string name="stop_button">Terminer</string>
    <string name="good_answer">Bonne réponse !</string>
    <string name="bad_answer">Mauvaise réponse !</string>
    <string name="start_button_text">Démarrer la partie</string>
    <string name="please_respond">Veuillez d\'abord répondre à la question</string>
    <string name="answer_has_been_shown">Vous avez triché !</string>
    <string name="cheat_button">Tricher</string>
    <string name="warning_text">Attention ! Vous êtes sur le point de tricher.</string>
    <string name="show_answer_button">Afficher la réponse</string>
    <string name="response_cheat_placeholder">La réponse est : </string>
    <string name="question_text">Prêt à démarrer le quiz ?</string>
    <string name="question_australia">Canberra est la capitale de l\'Australie.</string>
    <string name="explanation_australia">Canberra a été choisie comme capitale en raison de sa position centrale entre Sydney et Melbourne.</string>
    <string name="question_oceans">L\'océan Pacifique est plus large que l\'océan Atlantique.</string>
    <string name="explanation_oceans">L\'océan Pacifique est le plus vaste des océans, s\'étendant sur environ 63 millions de km².</string>
    <string name="question_mideast">Le canal de Suez relie la mer Rouge et l\'océan Indien.</string>
    <string name="explanation_mideast">Le canal de Suez relie la mer Rouge à la Méditerranée, facilitant le transport maritime.</string>
    <string name="question_africa">L\'Égypte est située en Afrique du Sud.</string>
    <string name="explanation_africa">L\'Égypte est située en Afrique du Nord, pas en Afrique du Sud.</string>
    <string name="question_asia">Le Japon est composé de plus de 6 000 îles.</string>
    <string name="explanation_asia">Le Japon est en effet un archipel, avec quatre îles principales et de nombreuses plus petites.</string>
    <string name="question_moon">L\'homme a marché sur la Lune en 1969.</string>
    <string name="explanation_moon">L\'alunissage d\'Apollo 11 a marqué un moment historique dans l\'exploration spatiale.</string>
    <string name="question_mars">Mars est plus proche du Soleil que la Terre.</string>
    <string name="explanation_mars">En réalité, la Terre est plus proche du Soleil que Mars, qui est la quatrième planète.</string>
    <string name="question_pyramids">Les pyramides de Gizeh ont été construites par des esclaves.</string>
    <string name="explanation_pyramids">Les archéologues estiment que des ouvriers qualifiés ont construit les pyramides, pas des esclaves.</string>
    <string name="question_flight">Les frères Wright ont inventé le premier avion fonctionnel.</string>
    <string name="explanation_flight">Leurs premiers vols contrôlés en 1903 ont marqué le début de l\'aviation moderne.</string>
    <string name="question_internet">L\'Internet a été inventé dans les années 1980.</string>
    <string name="explanation_internet">L\'Internet a évolué à partir de recherches militaires dans les années 1960 et 1970.</string>
    <string name="question_brazil">Le Brésil est le plus grand pays d\'Amérique du Sud.</string>
    <string name="explanation_brazil">Avec sa superficie de 8,5 millions de km², le Brésil est le plus vaste d\'Amérique du Sud.</string>
    <string name="question_europe">La France est le plus grand pays d\'Europe par superficie.</string>
    <string name="explanation_europe">La France métropolitaine est en effet le plus grand pays, mais la Russie en a une partie en Europe.</string>
    <string name="question_sahara">Le Sahara est le plus grand désert du monde.</string>
    <string name="explanation_sahara">Le Sahara est le plus grand désert chaud, tandis que l\'Antarctique est le plus grand désert froid.</string>
    <string name="question_amazon">L\'Amazonie est la plus grande forêt tropicale du monde.</string>
    <string name="explanation_amazon">La forêt amazonienne couvre environ 5,5 millions de km², ce qui en fait la plus vaste forêt tropicale.</string>
    <string name="question_usa">Les États-Unis ont 52 États.</string>
    <string name="explanation_usa">Les États-Unis comptent 50 États, plus un district fédéral (Washington D.C.).</string>
    <string name="question_china">La Grande Muraille de Chine est visible depuis l\'espace.</string>
    <string name="explanation_china">C\'est un mythe ; la muraille n\'est pas visible à l\'œil nu depuis l\'espace.</string>
    <string name="question_water">L\'eau couvre environ 71% de la surface de la Terre.</string>
    <string name="explanation_water">Environ 97% de cette eau est salée, se trouvant dans les océans.</string>
    <string name="question_venus">Vénus est la planète la plus chaude du système solaire.</string>
    <string name="explanation_venus">Sa chaleur est due à un effet de serre intense, avec des températures atteignant 465°C.</string>
    <string name="question_russia">La Russie est le plus grand pays du monde.</string>
    <string name="explanation_russia">Avec une superficie de 17 millions de km², la Russie est le plus grand pays par sa superficie.</string>
    <string name="question_nile">Le Nil est le plus long fleuve du monde.</string>
    <string name="explanation_nile">Il mesure environ 6 650 km de long, rivalisant parfois avec l\'Amazone selon les mesures.</string>
    <string name="question_everest">L\'Everest est la plus haute montagne du monde.</string>
    <string name="explanation_everest">Avec ses 8 848 mètres, l\'Everest est le sommet le plus élevé au-dessus du niveau de la mer.</string>
    <string name="question_dna">L\'ADN humain contient environ 3 milliards de paires de bases.</string>
    <string name="explanation_dna">L\'ADN humain est constitué de 23 paires de chromosomes contenant environ 3 milliards de paires de bases.</string>
    <string name="question_electricity">Thomas Edison a inventé l\'électricité.</string>
    <string name="explanation_electricity">L\'électricité est un phénomène naturel, mais Edison a inventé de nombreuses technologies électriques.</string>
    <string name="question_dinosaurs">Les dinosaures ont disparu il y a environ 65 millions d\'années.</string>
    <string name="explanation_dinosaurs">Cette extinction de masse est souvent attribuée à un impact d\'astéroïde.</string>
    <string name="question_ww2">La Seconde Guerre mondiale a pris fin en 1945.</string>
    <string name="explanation_ww2">La guerre a pris fin avec la capitulation de l\'Allemagne et du Japon.</string>
    <string name="question_rome">Rome a été fondée en 753 avant J.-C.</string>
    <string name="explanation_rome">Cette date est une tradition, bien que l\'histoire de Rome soit plus complexe.</string>
    <string name="question_gravity">La gravité sur la Lune est six fois plus faible que sur Terre.</string>
    <string name="explanation_gravity">Cela permet aux astronautes de sauter plus haut sur la Lune qu\'ils ne le feraient sur Terre.</string>
    <string name="question_pluto">Pluton est toujours considérée comme une planète.</string>
    <string name="explanation_pluto">Pluton a été reclassifiée comme planète naine en 2006 par l\'Union Astronomique Internationale.</string>
    <string name="question_spain">Madrid est la capitale de l\'Espagne.</string>
    <string name="explanation_spain">Madrid est le centre politique et culturel du pays.</string>
    <string name="question_sun">Le Soleil est une étoile de type naine jaune.</string>
    <string name="explanation_sun">Le Soleil est une étoile de la séquence principale, principalement composée d\'hydrogène et d\'hélium.</string>
    <string name="question_mercury">Mercure est la planète la plus proche du Soleil.</string>
    <string name="explanation_mercury">Mercure orbite autour du Soleil à une distance moyenne de 57,91 millions de km.</string>
    <string name="question_antarctica">L\'Antarctique est le continent le plus froid de la Terre.</string>
    <string name="explanation_antarctica">Les températures peuvent descendre jusqu\'à -80°C en hiver sur le continent.</string>
    <string name="question_galileo">Galilée a été le premier à observer les lunes de Jupiter.</string>
    <string name="explanation_galileo">Ses observations en 1610 ont changé notre compréhension du système solaire.</string>
    <string name="question_alaska">L\'Alaska est l\'État le plus au nord des États-Unis.</string>
    <string name="explanation_alaska">Il est connu pour ses paysages magnifiques et sa faune diversifiée.</string>
    <string name="question_einstein">La théorie de la relativité a été développée par Albert Einstein.</string>
    <string name="explanation_einstein">Cette théorie a révolutionné notre compréhension de la gravité et du temps.</string>
    <string name="question_washington">Washington D.C. est la capitale des États-Unis.</string>
    <string name="explanation_washington">C\'est également le siège du gouvernement fédéral et de nombreuses institutions importantes.</string>
    <string name="question_oil">Le pétrole est la source d\'énergie la plus utilisée dans le monde.</string>
    <string name="explanation_oil">Il est utilisé pour la production d\'électricité, le transport et de nombreux produits.</string>
    <string name="question_ozone">La couche d\'ozone protège la Terre des rayons UV du Soleil.</string>
    <string name="explanation_ozone">Cette couche se trouve dans la stratosphère et absorbe la plupart des rayons UV nocifs.</string>
    <string name="question_coldwar">La guerre froide a opposé les États-Unis et l\'Union soviétique.</string>
    <string name="explanation_coldwar">Ce conflit idéologique a duré plusieurs décennies après la Seconde Guerre mondiale.</string>
    <string name="question_vikings">Les Vikings étaient des explorateurs venus de Scandinavie.</string>
    <string name="explanation_vikings">Ils ont navigué vers de nombreuses régions, y compris l\'Amérique du Nord.</string>
    <string name="question_cows">Les vaches ont quatre estomacs.</string>
    <string name="explanation_cows">Leur système digestif leur permet de digérer efficacement l\'herbe.</string>
    <string name="question_blood">Le groupe sanguin le plus rare est AB-.</string>
    <string name="explanation_blood">AB- est le moins commun, ce qui le rend rare dans les transfusions sanguines.</string>
    <string name="question_pacman">Pac-Man est un jeu vidéo sorti dans les années 1980.</string>
    <string name="explanation_pacman">Ce jeu emblématique a été lancé en 1980 et est devenu un classique des arcades.</string>
    <string name="question_earth">La Terre tourne autour de son axe en 24 heures.</string>
    <string name="explanation_earth">Cette rotation est responsable du cycle jour/nuit.</string>
    <string name="question_saturn">Saturne a des anneaux composés principalement de glace.</string>
    <string name="explanation_saturn">Ces anneaux sont visibles même avec de petits télescopes.</string>
    <string name="question_volcano">Le Vésuve est un volcan actif en Italie.</string>
    <string name="explanation_volcano">Il est célèbre pour l\'éruption de 79 après J.-C. qui a enseveli Pompéi.</string>
    <string name="question_pizza">La pizza est originaire d\'Italie.</string>
    <string name="explanation_pizza">La pizza telle que nous la connaissons est originaire de Naples.</string>
    <string name="question_moonphase">La pleine lune apparaît tous les 29,5 jours.</string>
    <string name="explanation_moonphase">Ce cycle lunaire influence de nombreux phénomènes naturels sur Terre.</string>
    <string name="question_panda">Le panda géant est originaire de Chine.</string>
</resources>