<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="top"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/border_background"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/score_text"
                android:text="@string/score_text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/scoreNumber"
                android:text="@string/score_number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/game_interface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="25dp"
        >
        <TextView
            android:id="@+id/question_explication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:background="@drawable/border_background"
            android:text="@string/question_text"
            android:visibility="invisible"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:max="9"
            android:progress="0"
            />
        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:background="@drawable/border_background"
            android:text="@string/question_text" />
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:id="@+id/game_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="gone"
            >
            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="5dp"
                >
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/cheat_button"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheat_button"/>
                <Button
                    android:background="@drawable/border_background"
                    android:id="@+id/true_button"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_button" />

                <Button
                    android:background="@drawable/border_background"
                    android:id="@+id/false_button"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false_button"/>
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/next_button"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_button"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:id="@+id/start_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <Button
                android:background="@drawable/border_background"
                android:id="@+id/start_button"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button_text" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

